Moved alt-text button to bottom left to avoid overlap on last image on small screens

--- a/front-end/src/Components/App/App.css
+++ b/front-end/src/Components/App/App.css
@@ -826,7 +826,7 @@ main {
   cursor: pointer;  
   position: absolute;
   z-index: 2;
-  right: 5px;
+  left: 5px;
   bottom: 5px;
   min-width: 30px;
   border-radius: 5px;
